Fix travis tests.